# learn-cloud-native-modern-python

./: Growth_Mindset_Challenge.md  README.md
00_python_colab/: README.md  growth_mindset_challenge.md  project_challenge.md
00_python_colab/01_data_types/: readme.md
00_python_colab/02_operators_keywords_variables/: readme.md
00_python_colab/03_strings_casting/: readme.md
00_python_colab/04_control_flow/: readme.md
00_python_colab/05_lists_tuples_dict/: readme.md
00_python_colab/06_sets/: readme.md
00_python_colab/07_functions_exception_handling/: readme.md
00_python_colab/08_file_handling/: readme.md
00_python_colab/09_math_datetime/: readme.md
00_python_colab/10_oop/: readme.md
00_rise_of_ai_assisted_programming/: readme.md
02_chop/: readme.md
02_chop/00_cursor/: readme.md
02_chop/00_cursor/00_tab/: readme.md
02_chop/00_cursor/01_calculator/: readme.md
02_chop/00_cursor/01_calculator/calc_proj/: pyproject.toml
02_chop/00_cursor/01_calculator/calc_proj/src/calc_proj/: __init__.py
02_chop/00_cursor/02_composer/: readme.md
02_chop/01_github_copilot_vscode/: readme.md
02_chop/02_chatgpt_desktop_vscode/: readme.md
05_ai_assisted_programming/: readme.md
05_chop/: readme.md
05_chop/00_cursor/: readme.md
05_chop/00_cursor/01_calculator/calc_proj/src/calc_proj/: Calculator.py  usage.py
05_chop/00_cursor/02_composer/: readme.md
05_chop/00_tool_choice/: readme.md
05_chop/01_github_copilot_vscode/: readme.md
06_ai_assisted_programming/: readme.md
LEARNING-NOTEBOOKS/: README.md
