[project]
name = "calc-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zia Khan", email = "ziaukhan@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
calc = "calc_proj.usage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
